--- a/MusicProject/index.html
+++ b/MusicProject/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>MLH's soundboard</title>
+    <title>Anime soundboard</title>
     <link rel="shortcut icon" type="image/png" href="./favicon.png"/>
     <link rel="stylesheet" href="assets/css/hexagons.min.css">
   </head>
@@ -47,27 +47,27 @@
 
     <!-- Audio elements go here! -->
     <audio id="Again">
-      <source src="./sounds/Again.mp3" type="audio/mp3">
+      <source src="./Sounds/Again.mp3" type="audio/mp3">
       Hi, your browser does not support audio files.
     </audio>
     <audio id="Kirameki">
-      <source src="./sounds/Kiramkei.mp3" type="audio/mp3">
+      <source src="./Sounds/Kiramkei.mp3" type="audio/mp3">
       Hi, your browser does not support audio files.
     </audio>
     <audio id="Hikaru-Nara">
-      <source src="./sounds/HikaruNara.mp3" type="audio/mp3">
+      <source src="./Sounds/HikaruNara.mp3" type="audio/mp3">
       Hi, your browser does not support audio files.
     </audio>
 	<audio id="My-Truth">
-      <source src="./sounds/MyTruth.mp3" type="audio/mp3">
+      <source src="./Sounds/MyTruth.mp3" type="audio/mp3">
       Hi, your browser does not support audio files.
     </audio>
 	<audio id="Crossing-Field">
-      <source src="./sounds/CrosingField.mp3" type="audio/mp3">
+      <source src="./Sounds/CrosingField.mp3" type="audio/mp3">
       Hi, your browser does not support audio files.
     </audio>
 	<audio id="Orange">
-      <source src="./sounds/Orange.mp3" type="audio/mp3">
+      <source src="./Sounds/Orange.mp3" type="audio/mp3">
       Hi, your browser does not support audio files.
     </audio>
 
